fix navbar logo visibility and hamburger position

--- a/src/Navigation/Navigation.css
+++ b/src/Navigation/Navigation.css
@@ -25,3 +25,7 @@
   border-color: transparent;
   box-shadow: none;
 }*/
+
+li.nav-item > a:active {
+  border-top: solid 7px #d14210;
+}
